--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "prettier": "^3.1.0",
     "typescript": "^5.3.2",
     "vitest": "^0.34.6"
+  },
+  "dependencies": {
+    "bun": "^1.1.38"
   }
 }
